<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/ufc"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobre" />

        <TextView
            android:id="@+id/not"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digitarNome" />

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digitarCidade" />

        <Spinner
            android:id="@+id/spin_cidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/curso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/curso" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cc" />

            <RadioButton
                android:id="@+id/ec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ec" />

            <RadioButton
                android:id="@+id/es"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/es" />

        </RadioGroup>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>