<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sobre">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telaGrid" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sessaoClickLongo"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/button_click"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listView"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ListView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


        </ListView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>